# finite-state-machines-vizualizer

./: README.md
apps/backend/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
apps/backend/.github/workflows/: ci.yml
apps/backend/tests/: test_ci_setup.py
apps/frontend/: package.json
